--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Luminous/src/ext/stb"]
 	path = Luminous/src/ext/stb
 	url = https://github.com/nothings/stb.git
+[submodule "Luminous/src/ext/cxxopts"]
+	path = Luminous/src/ext/cxxopts
+	url = https://github.com/jarro2783/cxxopts.git
