--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "Luminous/src/ext/cxxopts"]
 	path = Luminous/src/ext/cxxopts
 	url = https://github.com/jarro2783/cxxopts.git
+[submodule "Luminous/src/ext/embree"]
+	path = Luminous/src/ext/embree
+	url = https://github.com/embree/embree.git
+[submodule "Luminous/src/ext/oidn"]
+	path = Luminous/src/ext/oidn
+	url = https://github.com/OpenImageDenoise/oidn.git
