--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "Luminous/src/ext/spdlog"]
+[submodule "Luminous/thirdpartys/spdlog"]
 	path = Luminous/thirdparty/spdlog
 	url = https://github.com/gabime/spdlog.git
-[submodule "Luminous/src/ext/stb"]
-	path = Luminous/src/ext/stb
-	url = https://github.com/nothings/stb.git
