--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@ Luminous/cmake-build-debug
 Luminous/cmake-build-relwithdebinfo
 Luminous/cmake-build-minsizerel
 Luminous/cmake-build-release
-Build
+build
 xcode
