--- a/Luminous/src/CMakeLists.txt
+++ b/Luminous/src/CMakeLists.txt
@@ -1,7 +1,21 @@
-function(luminous_add_application name)
-    cmake_parse_arguments(APP "" "" "SOURCES" ${ARGN})
-    add_executable(${name} ${APP_SOURCES})
-    target_compile_features(${name} PRIVATE c_std_11 cxx_std_17)
-    target_link_libraries(${name} PRIVATE luminous-all)
-    set_target_properties(${name} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/")
-endfunction()
+
+
+file(GLOB_RECURSE HEADER_FILES *.h*)
+file(GLOB_RECURSE SOURCE_FILES *.c*)
+
+
+include_directories("${PROJECT_SOURCE_DIR}/src")
+include_directories("${PROJECT_SOURCE_DIR}/src/ext/stblib/stb")
+
+foreach (_source IN ITEMS ${ALL_FILES})
+    assign_source_group(${_source})
+endforeach ()
+
+include_directories("${PROJECT_SOURCE_DIR}/thirdparty/spdlog/include")
+
+add_subdirectory(core)
+add_subdirectory(compute)
+
+
+
+#add_executable(${APP_NAME} ${HEADER_FILES} ${SOURCE_FILES})
