整理工程依赖关系

--- a/Luminous/src/CMakeLists.txt
+++ b/Luminous/src/CMakeLists.txt
@@ -1,9 +1,3 @@
-
-
-file(GLOB_RECURSE HEADER_FILES *.h*)
-file(GLOB_RECURSE SOURCE_FILES *.c*)
-
-
 include_directories("${PROJECT_SOURCE_DIR}/src")
 include_directories("${PROJECT_SOURCE_DIR}/src/ext/stblib/stb")
 
@@ -15,7 +9,5 @@ include_directories("${PROJECT_SOURCE_DIR}/thirdparty/spdlog/include")
 
 add_subdirectory(core)
 add_subdirectory(compute)
-
-
-
-#add_executable(${APP_NAME} ${HEADER_FILES} ${SOURCE_FILES})
+add_subdirectory(apps)
+add_subdirectory(tests)
