--- a/Luminous/src/backends/metal/CMakeLists.txt
+++ b/Luminous/src/backends/metal/CMakeLists.txt
@@ -7,3 +7,4 @@ file(GLOB_RECURSE HEADER_FILES *.h*)
 file(GLOB_RECURSE SOURCE_FILES *.mm)
 
 luminous_add_backend(metal SOURCES ${SOURCE_FILES} ${HEADER_FILES})
+target_link_libraries(luminous-backend-metal PRIVATE "-framework Foundation" "-framework Metal" "-framework MetalKit" "-framework MetalPerformanceShaders")
