--- a/Luminous/src/compute/CMakeLists.txt
+++ b/Luminous/src/compute/CMakeLists.txt
@@ -3,4 +3,4 @@ file(GLOB SOURCE_FILES *.cpp)
 
 add_library(luminous-compute SHARED ${HEADER_FILES} ${SOURCE_FILES})
 
-target_link_libraries(luminous-compute PUBLIC luminous-core)
+target_link_libraries(luminous-compute PUBLIC luminous-core luminous-ext)
