添加测试文件

--- a/Luminous/src/tests/CMakeLists.txt
+++ b/Luminous/src/tests/CMakeLists.txt
@@ -1,1 +1,2 @@
 luminous_add_application(luminous-cpp-code-gen SOURCES cpp_code_gen.cpp)
+luminous_add_application(luminous-metal-test SOURCES metal_kernel_test.cpp)
