--- a/Luminous/CMakeLists.txt
+++ b/Luminous/CMakeLists.txt
@@ -22,11 +22,13 @@ function(assign_source_group)
     endforeach ()
 endfunction(assign_source_group)
 
-function(luminous_add_application name)
+function(luminous_add_application_metal name)
     cmake_parse_arguments(APP "" "" "SOURCES" ${ARGN})
     add_executable(${name} ${APP_SOURCES})
     target_compile_features(${name} PRIVATE c_std_11 cxx_std_17)
     target_link_libraries(${name} PRIVATE luminous-all)
+    add_dependencies(${name} luminous-backend-metal)
+    set_target_properties(${name} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIG>/bin/")
 endfunction()
 
 add_subdirectory(thirdparty/spdlog)
