优化成员访问符

--- a/Luminous/src/tests/CMakeLists.txt
+++ b/Luminous/src/tests/CMakeLists.txt
@@ -1,2 +1,4 @@
-luminous_add_application_metal(luminous-cpp-code-gen SOURCES cpp_code_gen.cpp)
-luminous_add_application_metal(luminous-metal-test SOURCES metal_kernel_test.cpp)
+luminous_add_application_metal(test-cpp-code-gen SOURCES cpp_code_gen.cpp)
+luminous_add_application_metal(test-metal-kernel SOURCES metal_kernel_test.cpp)
+luminous_add_application_metal(test-buffer-io SOURCES test_buffer_io.cpp)
+luminous_add_application_metal(test-texture-io SOURCES test_texture_io.cpp)
