--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,12 @@
-[submodule "Luminous/thirdpartys/spdlog"]
-	path = Luminous/thirdparty/spdlog
-	url = https://github.com/gabime/spdlog.git
 [submodule "Luminous/thirdparty/cxxopts"]
 	path = Luminous/thirdparty/cxxopts
 	url = https://github.com/jarro2783/cxxopts.git
 [submodule "Luminous/thirdparty/assimp"]
 	path = Luminous/thirdparty/assimp
 	url = https://github.com/assimp/assimp.git
-
+[submodule "Luminous/thirdparty/spdlog"]
+	path = Luminous/thirdparty/spdlog
+	url = https://github.com/gabime/spdlog.git
+[submodule "Luminous/thirdparty/mimalloc"]
+	path = Luminous/thirdparty/mimalloc
+	url = https://github.com/microsoft/mimalloc.git
