--- a/Luminous/src/tests/CMakeLists.txt
+++ b/Luminous/src/tests/CMakeLists.txt
@@ -2,3 +2,4 @@ luminous_add_application_metal(test-cpp-code-gen SOURCES cpp_code_gen.cpp)
 luminous_add_application_metal(test-metal-kernel SOURCES metal_kernel_test.cpp)
 luminous_add_application_metal(test-buffer-io SOURCES test_buffer_io.cpp)
 luminous_add_application_metal(test-texture-io SOURCES test_texture_io.cpp)
+luminous_add_application_metal(test-transform SOURCES test_transform.cpp)
