--- a/Luminous/src/render/transforms/CMakeLists.txt
+++ b/Luminous/src/render/transforms/CMakeLists.txt
@@ -1,2 +1,3 @@
 
-luminous_render_add_plugin(trs CATEGORY transform SOURCES trs.cpp trs.h)
+luminous_render_add_plugin(trs CATEGORY transform SOURCES trs.cpp)
+luminous_render_add_plugin(linear_trs_animation CATEGORY transform SOURCES linear_trs_animation.cpp)
