--- a/Luminous/src/CMakeLists.txt
+++ b/Luminous/src/CMakeLists.txt
@@ -11,7 +11,7 @@ include_directories("${PROJECT_SOURCE_DIR}/thirdparty/spdlog/include")
 include_directories("${PROJECT_SOURCE_DIR}/thirdparty/cxxopts/include")
 
 add_library(luminous-all INTERFACE)
-target_link_libraries(luminous-all INTERFACE luminous-core luminous-compute luminous-ext)
+target_link_libraries(luminous-all INTERFACE luminous-core luminous-compute luminous-ext luminous-util)
 
 add_subdirectory(core)
 add_subdirectory(compute)
@@ -20,3 +20,4 @@ add_subdirectory(tests)
 add_subdirectory(backends)
 add_subdirectory(ext)
 add_subdirectory(render)
+add_subdirectory(util)
