--- a/Luminous/src/tests/CMakeLists.txt
+++ b/Luminous/src/tests/CMakeLists.txt
@@ -3,3 +3,4 @@ luminous_add_application_metal(test-metal-kernel SOURCES metal_kernel_test.cpp)
 luminous_add_application_metal(test-buffer-io SOURCES test_buffer_io.cpp)
 luminous_add_application_metal(test-texture-io SOURCES test_texture_io.cpp)
 luminous_add_application_metal(test-transform SOURCES test_transform.cpp)
+luminous_add_application_metal(test-parallel SOURCES test_parallel.cpp)
