--- a/Luminous/src/util/CMakeLists.txt
+++ b/Luminous/src/util/CMakeLists.txt
@@ -1,4 +1,7 @@
 file(GLOB HEADER_FILES *.h)
 file(GLOB SOURCE_FILES *.cpp)
 
+
+message(${HEADER_FILES})
+
 add_library(luminous-util SHARED ${HEADER_FILES} ${SOURCE_FILES})
