--- a/Luminous/src/render/CMakeLists.txt
+++ b/Luminous/src/render/CMakeLists.txt
@@ -14,3 +14,4 @@ add_subdirectory(include)
 add_subdirectory(samplers)
 add_subdirectory(transforms)
 add_subdirectory(rasterizers)
+add_subdirectory(textures)
