--- a/Luminous/src/render/CMakeLists.txt
+++ b/Luminous/src/render/CMakeLists.txt
@@ -15,3 +15,4 @@ add_subdirectory(samplers)
 add_subdirectory(transforms)
 add_subdirectory(rasterizers)
 add_subdirectory(textures)
+add_subdirectory(cameras)
