--- a/Luminous/src/render/rasterizers/CMakeLists.txt
+++ b/Luminous/src/render/rasterizers/CMakeLists.txt
@@ -1,1 +1,1 @@
-luminous_render_add_plugin(cpu_rasterizer CATEGORY sampler SOURCES cpu_rasterizer.cpp)
+luminous_render_add_plugin(cpu_rasterizer CATEGORY rasterizer SOURCES cpu_rasterizer.cpp)
