--- a/Luminous/src/render/textures/CMakeLists.txt
+++ b/Luminous/src/render/textures/CMakeLists.txt
@@ -1,2 +1,8 @@
-luminous_render_add_plugin(constant CATEGORY texture SOURCES constant_texture.cpp)
-luminous_render_add_plugin(bitmap CATEGORY texture SOURCES bitmap.cpp)
+
+
+luminous_render_add_plugin(constant_float3 CATEGORY texture SOURCES constant_texture.cpp)
+target_compile_definitions(luminous-texture-constant_float3 PRIVATE FLOAT3)
+
+luminous_render_add_plugin(constant_float4 CATEGORY texture SOURCES constant_texture.cpp)
+target_compile_definitions(luminous-texture-constant_float4 PRIVATE FLOAT4)
+
