--- a/Luminous/src/render/CMakeLists.txt
+++ b/Luminous/src/render/CMakeLists.txt
@@ -16,3 +16,4 @@ add_subdirectory(transforms)
 add_subdirectory(rasterizers)
 add_subdirectory(textures)
 add_subdirectory(cameras)
+add_subdirectory(filters)
