--- a/Luminous/src/render/CMakeLists.txt
+++ b/Luminous/src/render/CMakeLists.txt
@@ -17,3 +17,4 @@ add_subdirectory(rasterizers)
 add_subdirectory(textures)
 add_subdirectory(cameras)
 add_subdirectory(filters)
+add_subdirectory(shapes)
