--- a/Luminous/src/render/CMakeLists.txt
+++ b/Luminous/src/render/CMakeLists.txt
@@ -18,3 +18,4 @@ add_subdirectory(textures)
 add_subdirectory(cameras)
 add_subdirectory(filters)
 add_subdirectory(shapes)
+add_subdirectory(films)
