--- a/Luminous/src/util/CMakeLists.txt
+++ b/Luminous/src/util/CMakeLists.txt
@@ -3,3 +3,4 @@ file(GLOB SOURCE_FILES *.cpp)
 
 
 add_library(luminous-util SHARED ${HEADER_FILES} ${SOURCE_FILES})
+target_link_libraries(luminous-util PRIVATE assimp_config luminous-core)
