--- a/Luminous/src/render/shapes/CMakeLists.txt
+++ b/Luminous/src/render/shapes/CMakeLists.txt
@@ -1,1 +1,2 @@
 luminous_render_add_plugin(tri_mesh CATEGORY shape SOURCES tri_mesh.cpp)
+luminous_render_add_plugin(instance CATEGORY shape SOURCES instance.cpp)
