--- a/Luminous/src/render/CMakeLists.txt
+++ b/Luminous/src/render/CMakeLists.txt
@@ -3,7 +3,7 @@ add_library(luminous-plugins INTERFACE)
 function(luminous_render_add_plugin name)
     cmake_parse_arguments(PLUGIN "" "CATEGORY" "SOURCES" ${ARGN})
     add_library(luminous-${PLUGIN_CATEGORY}-${name} MODULE ${PLUGIN_SOURCES})
-    target_link_libraries(luminous-${PLUGIN_CATEGORY}-${name} PRIVATE mimalloc_config luminous-render luminous-util)
+    target_link_libraries(luminous-${PLUGIN_CATEGORY}-${name} PRIVATE mimalloc_config luminous-render)
     add_dependencies(luminous-plugins luminous-${PLUGIN_CATEGORY}-${name})
     set_target_properties(luminous-${PLUGIN_CATEGORY}-${name} PROPERTIES
             LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIG>/bin/plugins/"
