--- a/Luminous/src/CMakeLists.txt
+++ b/Luminous/src/CMakeLists.txt
@@ -14,7 +14,13 @@ include_directories("${PROJECT_SOURCE_DIR}/thirdparty/assimp/include")
 include_directories("${CMAKE_BINARY_DIR}/thirdparty/assimp/include")
 
 add_library(luminous-all INTERFACE)
-target_link_libraries(luminous-all INTERFACE luminous-core luminous-compute luminous-ext luminous-util luminous-render)
+target_link_libraries(luminous-all INTERFACE
+        luminous-core
+        luminous-compute
+        luminous-ext
+        luminous-backends
+        luminous-util
+        luminous-render)
 
 add_subdirectory(core)
 add_subdirectory(compute)
