--- a/Luminous/src/render/filters/CMakeLists.txt
+++ b/Luminous/src/render/filters/CMakeLists.txt
@@ -1,3 +1,4 @@
 luminous_render_add_plugin(box CATEGORY filter SOURCES box.cpp)
 luminous_render_add_plugin(triangle CATEGORY filter SOURCES triangle.cpp)
 luminous_render_add_plugin(gaussian CATEGORY filter SOURCES gaussian.cpp)
+luminous_render_add_plugin(mitchell CATEGORY filter SOURCES mitchell.cpp)
