--- a/Luminous/src/render/CMakeLists.txt
+++ b/Luminous/src/render/CMakeLists.txt
@@ -18,4 +18,5 @@ add_subdirectory(textures)
 add_subdirectory(cameras)
 add_subdirectory(filters)
 add_subdirectory(models)
+add_subdirectory(lights)
 add_subdirectory(films)
