--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Luminous/thirdparty/spdlog"]
 	path = Luminous/thirdparty/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "Luminous/thirdparty/jitify"]
+	path = Luminous/thirdparty/jitify
+	url = https://github.com/NVIDIA/jitify.git
